--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
-    "expo": "~47.0.8",
+    "expo": "^47.0.13",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
